syntax = "proto3";

package drift;

// The Drift Vector Database Service
service Drift {
  // Inserts a vector into an index.
  rpc Insert (InsertRequest) returns (InsertResponse);

  // Searches for the nearest neighbors.
  rpc Search (SearchRequest) returns (SearchResponse);

  // Batch train a collection (runs K-Means and initializes quantization)
  rpc Train (TrainRequest) returns (TrainResponse);
}

// --- Messages ---

message Vector {
  uint64 id = 1;
  repeated float values = 2;
}

message InsertRequest {
  // Optional: support multiple collections later. 
  // For now, clients can leave this empty for "default".
  string collection_name = 1; 
  Vector vector = 2;
}

message InsertResponse {
  bool success = 1;
}

message SearchRequest {
  string collection_name = 1;
  repeated float vector = 2;
  uint32 k = 3; // Top-K results

  // New Drift Parameters (Optional)
  // If 0 or missing, server uses defaults.
  float target_confidence = 4; // e.g. 0.95
  float lambda = 5;            // e.g. 25.0
  float tau = 6;               // e.g. 100.0
}

message SearchResult {
  uint64 id = 1;
  float score = 2; // Distance or similarity score
}

message SearchResponse {
  repeated SearchResult results = 1;
}


message TrainRequest {
  string collection_name = 1;
  repeated Vector vectors = 2;
}

message TrainResponse {
  bool success = 1;
}